--- a/src/yaml/schedule.yaml
+++ b/src/yaml/schedule.yaml
@@ -12,8 +12,8 @@ buses:
   max_route: 0.75      # [hr]
   min_route: 0.15      # [hr]
 initial_charge:
-  max: 0.95            # [0-1]
-  min: 0.90            # [0-1]
+  - 0.95               # max [0-1]
+  - 0.90               # min [0-1]
 final_charge: 0.95     # [0-1]
 chargers:
   slow:
