More description and references in paper. Makefile updated pandoc command

--- a/docs/makefile
+++ b/docs/makefile
@@ -35,7 +35,7 @@ clean:
 ##-------------------------------------------------------------------------------
 #
 %.pdf: %.md
-	pandoc --pdf-engine=xelatex "$<" -o $@
+	pandoc --citeproc --listings --pdf-engine=xelatex "$<" -o $@
 
 ##-------------------------------------------------------------------------------
 #
