Finished algorithms, applied penalty method. Need to update puml still

--- a/docs/makefile
+++ b/docs/makefile
@@ -35,7 +35,7 @@ clean:
 ##-------------------------------------------------------------------------------
 #
 %.pdf: %.md
-	pandoc --citeproc --listings --pdf-engine=xelatex "$<" -o $@
+	pandoc --citeproc --number-sections --listings --pdf-engine=xelatex "$<" -o $@
 
 ##-------------------------------------------------------------------------------
 #
