Fix some issues

--- a/docs/makefile
+++ b/docs/makefile
@@ -3,7 +3,7 @@
 ##===============================================================================
 # Variables
 IMGDIR = ./img
-SRC   := $(wildcard *.org)
+SRC   := $(shell find . -type f -name "*.org")					# Source files
 UML   := $(wildcard $(IMGDIR)/*.puml)
 PNG   := $(patsubst %.puml, %.png, $(UML))
 PDF   := $(patsubst %.org, %.pdf, $(SRC))
@@ -22,7 +22,8 @@ png: $(PNG)
 
 ##-------------------------------------------------------------------------------
 #
-pdf: $(PDF)
+pdf:
+	emacs -Q --script build-paper.el
 
 ##-------------------------------------------------------------------------------
 #
@@ -31,11 +32,6 @@ clean:
 
 ##===============================================================================
 #
-
-##-------------------------------------------------------------------------------
-#
-%.pdf: %.org
-	emacs -Q --script build-paper.el
 
 ##-------------------------------------------------------------------------------
 #
