--- a/src/config/schedule.yaml
+++ b/src/config/schedule.yaml
@@ -1,24 +1,28 @@
-time_horizon: 24.0     # [hr]
+# ignore: [5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58]
+# ignore: [0,1,2,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58]
+ignore: [27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50]
+time:
+  BOD: 0.0                                                                      # Beginning of day [hr]
+  EOD: 24.0                                                                     # End of day [hr]
+  K: 1000                                                                       # [steps]
 buses:
-  num_bus: 5
-  num_visit: 20
+  num_bus: 15
+  num_visit: 200
   bus_length: 1
-  bat_capacity: 387.78 # [KWh]
-  max_charge: 1        # [0-1]
-  min_charge: 0.25     # [0-1]
-  dis_rate: 3.0        # [Kw]
-  max_rest: 0.5        # [hr]
-  min_rest: 0.25       # [hr]
-  max_route: 0.75      # [hr]
-  min_route: 0.15      # [hr]
+  bat_capacity: 388.0                                                           # [KWh]
+  max_charge: 1                                                                 # [0-1]
+  min_charge: 0.2                                                               # [0-1]
+  dis_rate: 32.4                                                                # [Kw]
+  max_rest: 0.3                                                                 # [hr]
+  min_rest: 0.15                                                                # [hr]
 initial_charge:
-  - 0.90               # min [0-1]
-  - 0.95               # max [0-1]
-final_charge: 0.95     # [0-1]
+  max: 0.9                                                                      # [0-1]
+  min: 0.9                                                                      # [0-1]
+final_charge: 0.70                                                              # [0-1]
 chargers:
   slow:
-    num: 7
-    rate: 100          # [Kw]
+    num: 15
+    rate: 30.0                                                                  # [Kw]
   fast:
-    num: 4
-    rate: 400          # [Kw]
+    num: 15
+    rate: 910.95                                                                # [Kw]
