--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand      = "0.8.4"
-yaml-rust = "0.4"
 csv       = "1.1"
+indicatif = {version = "*", features = ["rayon"]}
 num       = "0.4.1"
+rand      = "0.8.4"
 strum     = { version = "0.25", features = ["derive"] }
+yaml-rust = "0.4"
