--- a/src/config/general.yaml
+++ b/src/config/general.yaml
@@ -8,10 +8,7 @@ plot: 1
 schedule: "csv"
 
 # "wait"; "rand"
-solution_gen: "wait"
-
-# Time limit to solve [s]
-time_limit: 100
+solution_gen: "rand"
 
 # Output previous decision variable/param results
 load_from_file: 0
