--- a/src/config/schedule.yaml
+++ b/src/config/schedule.yaml
@@ -1,4 +1,4 @@
-# ignore: [5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58]
+# ignore: [6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58]
 # ignore: [0,1,2,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58]
 ignore: [27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50]
 time:
@@ -6,8 +6,9 @@ time:
   EOD: 24.0                                                                     # End of day [hr]
   K: 1000                                                                       # [steps]
 temp:
-  init: 500.0                                                                   # Initial temperature
-  delta: 0.995                                                                  # Temperature step size
+  type: Geometric                                                               # Geometric, Exponential, Linear
+  init: 9000.0                                                                  # Initial temperature
+  delta: 0.999                                                                  # Temperature step size
 buses:
   num_bus: 15
   num_visit: 200
@@ -24,8 +25,8 @@ initial_charge:
 final_charge: 0.70                                                              # [0-1]
 chargers:
   slow:
-    num: 15
+    num: 50
     rate: 30.0                                                                  # [Kw]
   fast:
-    num: 15
+    num: 50
     rate: 910.95                                                                # [Kw]
