Apply milp constraints to sa (#40)
* Running

* Update MILP on generation, select gen method

* Some of the MILP decision variables when generating a solution.
* Give an option to change the solution generation

* Getting better results

The code

```
        // Ensure the charge does not exceed the battery limit
        if !(eta[i] + charge <= kappa[Gam[i] as usize]) {
            return false;
        }
```

for some reason is too restrictive. Going to try to add a heuristic to not allow assignment time that will over charge the BEB.

* test update charge

* Add recipe to offload simulation to chuggy

* Run release version on remote

* Cleaner parameter input

* Go hard to test

* less busses

* new params

* Update readme

* update sa-pap-paper

--- a/src/config/general.yaml
+++ b/src/config/general.yaml
@@ -7,8 +7,8 @@ plot: 1
 # "rand"; "csv"
 schedule: "csv"
 
-# Time limit to solve [s]
-time_limit: 100
+# "wait"; "rand"
+solution_gen: "rand"
 
 # Output previous decision variable/param results
 load_from_file: 0
