--- a/src/config/schedule.yaml
+++ b/src/config/schedule.yaml
@@ -1,10 +1,15 @@
-# ignore: [5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58]
+# ignore: [6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58]
 # ignore: [0,1,2,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58]
-ignore: [27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50]
+# ignore: [27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50]
+ignore: [20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50]
 time:
   BOD: 0.0                                                                      # Beginning of day [hr]
   EOD: 24.0                                                                     # End of day [hr]
   K: 1000                                                                       # [steps]
+temp:
+  type: Geometric                                                               # Geometric, Exponential, Linear
+  init: 9000.0                                                                  # Initial temperature
+  delta: 0.999                                                                  # Temperature step size
 buses:
   num_bus: 15
   num_visit: 200
@@ -16,13 +21,13 @@ buses:
   max_rest: 0.3                                                                 # [hr]
   min_rest: 0.15                                                                # [hr]
 initial_charge:
-  max: 0.90                                                                     # [0-1]
+  max: 0.95                                                                     # [0-1]
   min: 0.90                                                                     # [0-1]
-final_charge: 0.70                                                              # [0-1]
+final_charge: 0.60                                                              # [0-1]
 chargers:
   slow:
-    num: 15
+    num: 50
     rate: 30.0                                                                  # [Kw]
   fast:
-    num: 15
+    num: 50
     rate: 910.95                                                                # [Kw]
