--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 csv       = "1.1"
+gnuplot   = "0.0.39"
 indicatif = {version = "*", features = ["rayon"]}
 num       = "0.4.1"
 rand      = "0.8.4"
