--- a/src/config/schedule.yaml
+++ b/src/config/schedule.yaml
@@ -5,10 +5,12 @@ ignore: [0,1,2,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,2
 time:
   BOD: 0.0                                                                      # Beginning of day [hr]
   EOD: 24.0                                                                     # End of day [hr]
+  # K: 5000                                                                       # [steps]
   K: 10                                                                       # [steps]
 temp:
   type: Geometric                                                               # Geometric, Exponential, Linear
-  init: 10.0                                                                  # Initial temperature
+  # init: 99999.0                                                                 # Initial temperature
+  init: 10.0                                                                 # Initial temperature
   delta: 0.995                                                                  # Temperature step size
 buses:
   num_bus: 15
