--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono    = "0.4"
 csv       = "1.1"
+gnuplot   = "0.0.39"
 indicatif = {version = "*", features = ["rayon"]}
 num       = "0.4.1"
 rand      = "0.8.4"
