--- a/src/config/schedule.yaml
+++ b/src/config/schedule.yaml
@@ -1,11 +1,12 @@
 # ignore: [6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58]
 # ignore: [0,1,2,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58]
-ignore: [27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50]
+# ignore: [27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50]
+ignore: [10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50]
 # ignore: [20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50]
 time:
   BOD: 0.0                                                                      # Beginning of day [hr]
   EOD: 24.0                                                                     # End of day [hr]
-  K: 1000                                                                       # [steps]
+  K: 10000                                                                      # [steps]
 temp:
   type: Geometric                                                               # Geometric, Exponential, Linear
   init: 99999.0                                                                 # Initial temperature
@@ -26,8 +27,8 @@ initial_charge:
 final_charge: 0.60                                                              # [0-1]
 chargers:
   slow:
-    num: 50
+    num: 20
     rate: 30.0                                                                  # [Kw]
   fast:
-    num: 50
+    num: 20
     rate: 910.95                                                                # [Kw]
