--- a/src/config/general.yaml
+++ b/src/config/general.yaml
@@ -8,7 +8,7 @@ plot: 0
 schedule: "csv"
 
 # "wait"; "rand"
-solution_gen: "rand"
+solution_gen: "wait"
 
 # Output previous decision variable/param results
 load_from_file: 0
