--- a/src/config/general.yaml
+++ b/src/config/general.yaml
@@ -5,6 +5,7 @@ cores: 1
 plot: 0
 
 # Real Time Plot - 1: True; 0: False
+# NOTE: If this is set to 1, it is recommended to change "cores" to 1.
 rtp: 1
 
 # "rand"; "csv"
