More success with random solution generator

--- a/src/config/general.yaml
+++ b/src/config/general.yaml
@@ -12,7 +12,7 @@ rtp: 0
 schedule: "csv"
 
 # "wait"; "rand"
-solution_gen: "wait"
+solution_gen: "rand"
 
 # "quick"; "exhaustive"
 tweak_method: "quick"
