Add configuration to enabledisable extra constraint checks (#108)
* Add flag for running all constraints

* Include flag in sa

* Migrate to general.yaml

* revert core and rpt

--- a/src/config/general.yaml
+++ b/src/config/general.yaml
@@ -17,6 +17,9 @@ solution_gen: "wait"
 # "quick"; "exhaustive"
 tweak_method: "quick"
 
+# Run all constraints (slow), or run required constraints (fast)
+run_all_constr: false
+
 # Output previous decision variable/param results
 load_from_file: 0
 
