--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ chrono    = "0.4"
 csv       = "1.1"
 gnuplot   = "0.0.39"
 indicatif = {version = "*", features = ["rayon"]}
+iter_tools= "0.1.3"
 num       = "0.4.1"
 rand      = "0.8.4"
 strum     = { version = "0.25", features = ["derive"] }
