--- a/src/config/general.yaml
+++ b/src/config/general.yaml
@@ -15,7 +15,7 @@ schedule: "csv"
 solution_gen: "wait"
 
 # "quick"; "exhaustive"
-tweak_method: "quick"
+tweak_method: "exhaustive"
 
 # Run all constraints (slow), or run required constraints (fast)
 run_all_constr: false
