--- a/src/config/general.yaml
+++ b/src/config/general.yaml
@@ -1,5 +1,5 @@
 # Number of processes to input values
-cores: 3
+cores: 8
 
 # 1: True; 0: False
 plot: 0
@@ -12,10 +12,10 @@ rtp: 0
 schedule: "csv"
 
 # "wait"; "rand"
-solution_gen: "wait"
+solution_gen: "rand"
 
 # "quick"; "exhaustive"
-tweak_method: "quick"
+tweak_method: "exhaustive"
 
 # Run all constraints (slow), or run required constraints (fast)
 run_all_constr: false
