Score plot, plot cleanup, weighted index selection (#130)
* Can plot power in real time

* Plot charger usage in real time

* plot charge and energy usage in real time

* Keep track of the best score

* Plotting score

* Plots are cool

* heavy cleanup of plotting

* Weighted index

* plots all the way

* weighted quick

* Update weights

* Betterweights for index

* Update general.yaml

* cleanup

* CReate priority vector

* Update

* I think its working

* Go back to best data to avoid divergence

* Implement weight for quick

* Fix plotters

* Update plot and outputs scores

* Update params

* Oh my god, its going to crazy town

* work params

* Good values

* update file names

* seems like good values

* Fix nonlinear

- Fix non-linear calculations
- plots non-linear charges correctly
- updates parameters to more accurately represent the linear batteries

* Update params

* Added stupid checks and change how max bat check

* disable rtp

* Udate params

* Always track the scores

* I think I was corrupting my own data

* fix test

--- a/src/config/general.yaml
+++ b/src/config/general.yaml
@@ -1,5 +1,5 @@
 # Number of processes to input values
-cores: 8
+cores: 1
 
 # 1: True; 0: False
 plot: 0
@@ -20,7 +20,7 @@ solution_gen: "rand"
 # "quick"; "exhaustive"
 tweak_method: "exhaustive"
 
-# Run all constraints (slow), or run required constraints (fast)
+# Run all con
 run_all_constr: false
 
 # Output previous decision variable/param results
